[package]
name = "basic_http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.26", features = ["server", "http1", "tcp"] }
tokio = { version = "1.28.1", features = ["rt-multi-thread", "macros"] }
