[package]
name = "low_level_http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
http = "0.2.9"
http-body-util = "0.1.0-rc.2"
hyper = { version = "0.14.26", features = ["full"] }
tokio = { version = "1.28.1", features = ["full"] }
